# autogen-python

./: .gitattributes  .gitignore  .projenrc.py  LICENSE  Makefile  README.md  pyproject.toml  scripts.py
.projen/: deps.json  files.json
cookiecutter-nano-django/: cookiecutter.json
cookiecutter-nano-django/{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml  scripts.py
cookiecutter-nano-django/{{cookiecutter.project_slug}}/tests/: test_example.py
cookiecutter-notebook/{{cookiecutter.project_slug}}/: .env  README.md  notebook.ipynb  pyproject.toml
