[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
license = "{{ cookiecutter.license }}"
authors = [ "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>" ]
readme = "README.md"

  [[tool.poetry.packages]]
  include = "src"

  [[tool.poetry.packages]]
  include = "tests"

  [[tool.poetry.packages]]
  include = "utils"

  [tool.poetry.scripts]
  start = "scripts:start"
  test = "scripts:test"
  lint = "scripts:lint"
  format = "scripts:format"

  [tool.poetry.dependencies]
  nanodjango = "*"
  python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
pytest-django = "*"
ruff = "*"
pytest = "7.4.3"
pre-commit = "^3.6.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
