[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
license = "{{ cookiecutter.license }}"
authors = [ "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>" ]
readme = "README.md"

  [tool.poetry.dependencies]
  python = "^{{ cookiecutter.python_version }}"
  pandas = "*"
  numpy = "*"
  matplotlib = "*"
  seaborn = "*"
  scipy = "*"
  scikit-learn = "*"
  scikit-learn = "*"
  plotly = "*"
  python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest-django = "*"
ruff = "*"
pytest = "7.4.3"
pre-commit = "^3.6.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
